# smart-keyframe-extractor

./: .env.example  .gitignore  AZURE_AUTHENTICATION_GUIDE.md  CLOUD_STORAGE_COMPLETE_REPORT.md  COMPLETE_PROJECT_REPORT.md  DETAIL_FEATURE_SUMMARY.md  DETAIL_PARAMETER_UPDATE.md  FINAL_SANITIZATION_REPORT.md  FINAL_STATUS.md  ITERATION_COMPLETION_REPORT.md  NOTEBOOK_DEMO_SUMMARY.md  NOTEBOOK_TRANSFORMATION_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OPTIMIZATION_REPORT.md  PROJECT_QUALITY_ASSURANCE_REPORT.md  PROJECT_SUMMARY.md  README.md  RELEASE_READY_REPORT.md  REMOTE_VIDEO_COMPLETION_SUMMARY.md  S3_COMPLETION_REPORT.md  S3_TEST_REPORT.md  STRESS_TESTING_GUIDE.md  STRESS_TEST_COMPLETION_SUMMARY.md  check_dependencies.py  cleanup_project.py  demo.py  demo_remote_video.py  deploy_cloud_stress_test.sh  multi_mode_test_results.json  project_dashboard.py  project_maintenance.py  pyproject.toml  requirements-remote.txt  requirements.txt  start_notebook_demo.sh  test_azure_blob_video.py  test_detail_notebook.ipynb  test_detail_results_20250612_110528.json  test_detail_results_20250612_111705.json  (+6 more)
benchmark/: CONCURRENT_TESTING_GUIDE.md  README.md  branch_comparator.py  cloud_stress_test.py  concurrent_stress_test.py  intelligent_batch_processor.py  large_dataset_stress_test.py  memory_stress_test.py  performance_optimizer.py  quick_benchmark.py  run_tests.py  stress_test.py  wyze_stress_test.py
benchmark_results/: benchmark_results_20250613_100017.json  concurrent_test_20250613_101409.csv  concurrent_test_20250613_101409.json  concurrent_test_20250613_101518.csv  concurrent_test_20250613_101518.json  concurrent_test_20250613_101703.csv  concurrent_test_20250613_101703.json
examples/: frame_skip_comparison.py  remote_video_example.py  sample_rate_explanation.py
scripts/: build_and_publish.sh  setup_remote_video.py  test_demo.py
smart_keyframe_extractor/: __init__.py  cli.py  extractor.py  remote_video_utils.py
tests/: test_remote_video.py
wyze_auto_results/: concurrent_test_20250613_105835.csv  concurrent_test_20250613_105835.json  summary_report_20250613_105837.json
